# myengine2d

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  glad.c  glad.h  main.cpp
myEngine/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  MyEngine.cpp  MyEngine.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.hpp
shaders/: fragment.glsl  vertex.glsl  vertexsun.glsl
